--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,27 +10,23 @@
     <div class="calculator">
       <div id="display">0</div>
       <div class="buttons">
-        <button class="btn" id="clear">C</button>
-        <button class="btn" id="backspace">←</button>
+        <button class="btn clear">C</button>
+        <button class="btn backspace">←</button>
         <button class="btn operator">/</button>
         <button class="btn operator">*</button>
-
         <button class="btn number">7</button>
         <button class="btn number">8</button>
         <button class="btn number">9</button>
         <button class="btn operator">-</button>
-
         <button class="btn number">4</button>
         <button class="btn number">5</button>
         <button class="btn number">6</button>
         <button class="btn operator">+</button>
-
         <button class="btn number">1</button>
         <button class="btn number">2</button>
         <button class="btn number">3</button>
         <button class="btn equal">=</button>
-
-        <button class="btn number" id="zero">0</button>
+        <button class="btn number zero">0</button>
         <button class="btn number">.</button>
       </div>
     </div>
