--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         <button class="btn number">.</button>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
